<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color3"
    android:gravity="center"
    tools:context=".MainActivity">
<!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toID"
        android:text="To"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
        -->


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@drawable/icon"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        android:id="@+id/startID"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        tools:ignore="InvalidId"
        />
    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/LoginID"
        android:text="@string/SignIn"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/carbo_color"
        />

    <Button
        android:id="@+id/RegisterID"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/carbo_color"
        android:text="@string/SignUp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp" />

</LinearLayout>